feat: native binary